release: prepare rust-java-rest 3.2.1